vendor/cargo/parameterized-macro-2.0.0/tests/ok/14_transitive_attr.rs
use parameterized_macro::parameterized;

#[parameterized(number = { 1, 2, 3 })]
#[should_panic]
fn my_test(number: i32) {}

fn main() {}
