vendor/cargo/parameterized-macro-2.0.0/tests/fail/no_param_nr2.rs
use parameterized_macro::parameterized;

#[parameterized(x = { 1, 2, 3 }, y = { 1, 2, 3 })]
fn my_test(x: i32, x2: i32) {}

fn main() {}
